# PI-Proiect-Efecte

./: CMakeLists.txt  README.md  main.cpp
src/: efecte.cpp  efecte.h
tests/: TestSuite.cpp  results.csv
